// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swap (MCV) 3-pool dual-orbit — deltas + automatic flip uses NEG set first, flips to POS after each swap; shows per-pool & treasury deltas 1`] = `
Object {
  "note": "NEG-first under independent 3-hop model (per-hop fees); run #1 ASSET-in, run #2 USDC-in.",
  "orbitRun1": Object {
    "activeOrbit": Array [
      "POOL#0",
      "POOL#1",
      "POOL#2",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "1010000000000000000",
        "deltaU": "-990000990000990000",
        "pool": "POOL#0",
      },
      Object {
        "deltaA": "1010000000000000000",
        "deltaU": "-990000990000990000",
        "pool": "POOL#1",
      },
      Object {
        "deltaA": "1010000000000000000",
        "deltaU": "-990000990000990000",
        "pool": "POOL#2",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#3",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#4",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#5",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "6000000000000000",
      "deltaU": "0",
    },
    "usingNegBefore": true,
  },
  "orbitRun2": Object {
    "activeOrbit": Array [
      "POOL#3",
      "POOL#4",
      "POOL#5",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#0",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#1",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#2",
      },
      Object {
        "deltaA": "-990000990000990000",
        "deltaU": "1010000000000000000",
        "pool": "POOL#3",
      },
      Object {
        "deltaA": "-990000990000990000",
        "deltaU": "1010000000000000000",
        "pool": "POOL#4",
      },
      Object {
        "deltaA": "-990000990000990000",
        "deltaU": "1010000000000000000",
        "pool": "POOL#5",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "0",
      "deltaU": "6000000000000000",
    },
    "usingNegBefore": false,
  },
  "role": "MCV",
  "startPool": "POOL#0",
}
`;

exports[`Swap (MCV) 3-pool dual-orbit — deltas + automatic flip uses POS set first, flips to NEG after each swap; shows per-pool & treasury deltas 1`] = `
Object {
  "note": "POS-first mirror under independent 3-hop model (per-hop fees).",
  "orbitRun1": Object {
    "activeOrbit": Array [
      "POOL#6",
      "POOL#7",
      "POOL#8",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#9",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#10",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#11",
      },
      Object {
        "deltaA": "-990000990000990000",
        "deltaU": "1010000000000000000",
        "pool": "POOL#6",
      },
      Object {
        "deltaA": "-990000990000990000",
        "deltaU": "1010000000000000000",
        "pool": "POOL#7",
      },
      Object {
        "deltaA": "-990000990000990000",
        "deltaU": "1010000000000000000",
        "pool": "POOL#8",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "0",
      "deltaU": "6000000000000000",
    },
    "usingNegBefore": false,
  },
  "orbitRun2": Object {
    "activeOrbit": Array [
      "POOL#9",
      "POOL#10",
      "POOL#11",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "1010000000000000000",
        "deltaU": "-990000990000990000",
        "pool": "POOL#9",
      },
      Object {
        "deltaA": "1010000000000000000",
        "deltaU": "-990000990000990000",
        "pool": "POOL#10",
      },
      Object {
        "deltaA": "1010000000000000000",
        "deltaU": "-990000990000990000",
        "pool": "POOL#11",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#6",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#7",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#8",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "6000000000000000",
      "deltaU": "0",
    },
    "usingNegBefore": true,
  },
  "role": "MCV",
  "startPool": "POOL#9",
}
`;

exports[`Swap (MCV) 3-pool orbit — liquidity snapshots (with deltas + hop proof) swap orbit — snapshot pools & treasury, deltas, offsets, hop order 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "executed": true,
  "hopTrace": Array [
    Object {
      "amountIn": "1000000000000000000",
      "amountOut": "990000990000990000",
      "assetToUsdc": false,
      "pool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
      "tokenIn": "0x0E801D84Fa97b50751Dbf25036d067dCf18858bF",
      "tokenOut": "0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf",
    },
    Object {
      "amountIn": "1000000000000000000",
      "amountOut": "990000990000990000",
      "assetToUsdc": false,
      "pool": "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
      "tokenIn": "0x0E801D84Fa97b50751Dbf25036d067dCf18858bF",
      "tokenOut": "0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf",
    },
    Object {
      "amountIn": "1000000000000000000",
      "amountOut": "990000990000990000",
      "assetToUsdc": false,
      "pool": "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
      "tokenIn": "0x0E801D84Fa97b50751Dbf25036d067dCf18858bF",
      "tokenOut": "0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf",
    },
  ],
  "note": "Per-hop fee (12 bps) is charged each hop and donated to that hop’s input reserve; treasury receives 2 bps per hop. Addresses decoded from topics.",
  "offsets": Array [
    -500,
    -500,
    -500,
  ],
  "orbitPools": Array [
    "0xca4211da53d1bbab819B03138302a21d6F6B7647",
    "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
    "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "99009999009999010000",
        "pool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
        "sqrtPriceX96": "78439881025007217691393523712",
        "u": "101010000000000000000",
      },
      Object {
        "a": "99009999009999010000",
        "pool": "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
        "sqrtPriceX96": "78439881025007217691393523712",
        "u": "101010000000000000000",
      },
      Object {
        "a": "99009999009999010000",
        "pool": "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
        "sqrtPriceX96": "78439881025007217691393523712",
        "u": "101010000000000000000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
        "sqrtPriceX96": "79228162514264337593543950336",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
        "sqrtPriceX96": "79228162514264337593543950336",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
        "sqrtPriceX96": "79228162514264337593543950336",
        "u": "100000000000000000000",
      },
    ],
    "delta": Array [
      Object {
        "a": "-990000990000990000",
        "u": "1010000000000000000",
      },
      Object {
        "a": "-990000990000990000",
        "u": "1010000000000000000",
      },
      Object {
        "a": "-990000990000990000",
        "u": "1010000000000000000",
      },
    ],
  },
  "revertReason": null,
  "role": "MCV",
  "startPool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
  "treasury": Object {
    "after": Object {
      "a": "700000000000000000000",
      "u": "700006000000000000000",
    },
    "before": Object {
      "a": "700000000000000000000",
      "u": "700000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "6000000000000000",
    },
  },
}
`;

exports[`Swap (MCV) Bypass guard via direct token movement (MCV path) ERC20.transfer / transferFrom to pool must NOT mutate reserves 1`] = `
Object {
  "note": "Direct token moves cannot spoof LPP reserves (MCV path). Use donateToReserves for legit credits.",
  "reservesAfter": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "reservesBefore": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "role": "MCV",
}
`;
